# fastapi_server_benchmark

./: Dockerfile_granian  Dockerfile_gunicorn  Dockerfile_socketify  Readme.md  main.py  pyproject.toml  requirements.txt  result.json
